# gpu-samples

./: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md
cmake/: base.cmake
cmake/modules/: d3d12.cmake  vulkan.cmake
src/assets/: cube.gltf  shapes.gltf
src/assets/crate/: crate.gltf
src/assets/damagedHelmet/: DamagedHelmet.gltf  license.txt
src/assets/ground/: ground.gltf  license.txt
src/assets/ponyCar/: car.gltf  license.txt
src/assets/shapes/: shapes.gltf
src/libs/app/: CmakeLists.txt  app.cpp  app.h  main-win.cpp  main.cpp
src/libs/assets/: assets.cpp  assets.h
src/libs/camera/: camera.cpp  camera.h
src/libs/d3dx12/: CMakeLists.txt
src/libs/gpu/: gpu.cpp  gpu.h  gpuD3D.cpp  gpuMtl..cpp  gpuVk.cpp
src/libs/gpuD3D/: gpu.cpp  gpu.h
src/libs/gpuVk/: gpu.cpp  gpu.h
src/libs/input/: input.h
src/libs/renderer/: renderer.h  rendererBase.cpp  rendererBase.h
src/libs/rendererInterface/: renderUtils.cpp  renderUtils.h  renderer.h
src/libs/scene/: camera.cpp  camera.h  scene.cpp  scene.h  sceneLoader.cpp  sceneLoader.h
src/libs/utils/: app.cpp  app.h  assets.cpp  assets.h  camera.cpp  camera.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sceneLoader.cpp  sceneLoader.h  utils.cpp  utils.h
src/libs/utilsD3D/: core.cpp  core.h  frames.cpp  frames.h  pipelines.cpp  pipelines.h  resources.cpp  resources.h  utilsD3D.cpp  utilsD3D.h
src/libs/utilsVk/: utilsVk.cpp  utilsVk.h
src/samples/00-info/: main.cpp
src/triangle-d3d/: CmakeLists.txt  main.c  main.cpp
src/triangle-vk/: CmakeLists.txt  main.c  main.cpp
(+99 files in other folders)
